fixing z-index issue for nprogress

--- a/documentation/app/static/styles/modules/documentation/api-documents.less
+++ b/documentation/app/static/styles/modules/documentation/api-documents.less
@@ -3,7 +3,7 @@
   border-bottom: solid 1px rgba(0,0,0,0.4);
   position: relative;
   position: relative;
-  z-index: 100;
+  z-index: 50;
 
   // Create border effect just for the lighter "for human" side
   &:after {
