--- a/documentation/app/static/styles/modules/header.less
+++ b/documentation/app/static/styles/modules/header.less
@@ -3,7 +3,7 @@
   height: 30px;
   width: 100%;
   background: #ddd;
-  z-index: 200;
+  z-index: 60;
   position: relative;
   border-bottom: solid 1px rgba(0,0,0,0.2);
   .box-sizing(border-box);
